--- a/crates/codegen/meta/Cargo.toml
+++ b/crates/codegen/meta/Cargo.toml
@@ -9,8 +9,14 @@ readme = "README.md"
 edition = "2018"
 
 [dependencies]
-cranelift-entity = { path = "../../cranelift-entity", version = "0.30.0" }
+cranelift-entity = { path = "../../cranelift-entity", version = "0.30.0", default-features = false }
 
 [badges]
 maintenance = { status = "experimental" }
 travis-ci = { repository = "CraneStation/cranelift" }
+
+[features]
+default = ["std"]
+std = ["cranelift-entity/std"]
+# The "core" feature enables a workaround for Cargo #4866.
+core = ["cranelift-entity/core"]
