--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ language: rust
 rust:
     # The oldest version we currently support. See
     # CONTRIBUTING.md#rustc-version-support for details.
-    - 1.32.0
+    - 1.33.0
     - beta
     - nightly
 matrix:
@@ -19,7 +19,7 @@ matrix:
     # Similarly, we don't need to hold up people using stable while we wait
     # for the results which may fail.
     fast_finish: true
-dist: trusty
+dist: xenial
 sudo: false
 addons:
     apt:
